app/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      name: nextjs-app
  template:
    metadata:
      labels:
        name: nextjs-app
    spec:
      imagePullSecrets:
        - name: github-token # Change this with your registry hosting, ex : github-token, gitlab-token, dockerhub-token
      containers:
        - name: nextjs-app
          # image: registry.gitlab.com/<username>/<repository>:latest
          image: ghcr.io/<username>/<repository>:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            periodSeconds: 5
            timeoutSeconds: 1
            initialDelaySeconds: 45
      terminationGracePeriodSeconds: 60

---
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
spec:
  selector:
    name: nextjs-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
  # externalTrafficPolicy: Cluster
  # type: LoadBalancer
